--- a/mServer/package.json
+++ b/mServer/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "lowdb": "^0.14.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "shortid": "^2.2.6"
   }
 }
